# Clean-Architecture-Authentication-System

./: .env  pyproject.toml
src/auth/: main.py
src/auth/application/use_cases/: login_user.py  register_user.py  update_user.py
src/auth/domain/: repository.py
src/auth/infrastructure/orm/: models.py
src/auth/infrastructure/repositories/: sqlalchemy_user_repo.py
src/auth/infrastructure/security/: bcrypt_hasher.py
src/auth/interface/: auth_router.py  auth_schemas.py  dependencies.py
